// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrKommentar Component should display Customer interaction 1`] = `
<div>
  <div
    className="PrKommentar-containerListItem-3"
  >
    <WithStyles(ListItem)
      button={true}
      className="PrKommentar-nestedListItem-4"
      onClick={[Function]}
    >
      <WithStyles(ListItemText)
        className={Object {}}
        secondary="Kundeninteraktion und -veränderung"
      />
      <WithStyles(Icon)
        className="PrKommentar-icon-6"
      >
        comment
      </WithStyles(Icon)>
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      className="PrKommentar-nestedNumber-7"
    >
      <WithStyles(FormControl)
        className="PrKommentar-formControlFTF-10"
      >
        <WithStyles(Select)
          displayEmpty={true}
          name="rating"
          onChange={[Function]}
          value={4}
        >
          <WithStyles(MenuItem)
            value={1}
          >
            1
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            value={2}
          >
            2
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            value={3}
          >
            3
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            value={4}
          >
            4
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            value={5}
          >
            5
          </WithStyles(MenuItem)>
        </WithStyles(Select)>
      </WithStyles(FormControl)>
    </WithStyles(ListItem)>
  </div>
  <WithStyles(Collapse)
    in={false}
    timeout="auto"
    unmountOnExit={true}
  >
    <WithStyles(List)
      className="PrKommentar-nestedText-1"
      component="div"
      disablePadding={true}
    >
      <WithStyles(ListItem)>
        <TextField
          InputLabelProps={
            Object {
              "shrink": true,
            }
          }
          InputProps={
            Object {
              "classes": Object {
                "input": "PrKommentar-bootstrapInput-2",
              },
              "disableUnderline": true,
              "name": "comment",
            }
          }
          fullWidth={true}
          id="CUSTOMER_INTERACTION"
          label="Kommentar"
          multiline={true}
          onChange={[Function]}
          required={false}
          rowsMax="4"
          select={false}
          value="iii"
        />
      </WithStyles(ListItem)>
      <WithStyles(ListItem) />
      <WithStyles(PrSwipePositionDescription)
        category="CUSTOMER_INTERACTION"
      />
    </WithStyles(List)>
  </WithStyles(Collapse)>
</div>
`;

exports[`PrKommentar Component should display ProblemAnalysis 1`] = `
<div>
  <div
    className="PrKommentar-containerListItem-3"
  >
    <WithStyles(ListItem)
      button={true}
      className="PrKommentar-nestedListItem-4"
      onClick={[Function]}
    >
      <WithStyles(ListItemText)
        className={Object {}}
        secondary="Problemanalyse und -lösung"
      />
      <WithStyles(Icon)
        className="PrKommentar-icon-6"
      >
        comment
      </WithStyles(Icon)>
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      className="PrKommentar-nestedNumber-7"
    >
      <WithStyles(FormControl)
        className="PrKommentar-formControlFTF-10"
      >
        <WithStyles(Select)
          displayEmpty={true}
          name="rating"
          onChange={[Function]}
          value={2}
        >
          <WithStyles(MenuItem)
            value={1}
          >
            1
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            value={2}
          >
            2
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            value={3}
          >
            3
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            value={4}
          >
            4
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            value={5}
          >
            5
          </WithStyles(MenuItem)>
        </WithStyles(Select)>
      </WithStyles(FormControl)>
    </WithStyles(ListItem)>
  </div>
  <WithStyles(Collapse)
    in={false}
    timeout="auto"
    unmountOnExit={true}
  >
    <WithStyles(List)
      className="PrKommentar-nestedText-1"
      component="div"
      disablePadding={true}
    >
      <WithStyles(ListItem)>
        <TextField
          InputLabelProps={
            Object {
              "shrink": true,
            }
          }
          InputProps={
            Object {
              "classes": Object {
                "input": "PrKommentar-bootstrapInput-2",
              },
              "disableUnderline": true,
              "name": "comment",
            }
          }
          fullWidth={true}
          id="PROBLEM_ANALYSIS"
          label="Kommentar"
          multiline={true}
          onChange={[Function]}
          required={false}
          rowsMax="4"
          select={false}
          value="ggg"
        />
      </WithStyles(ListItem)>
      <WithStyles(ListItem) />
      <WithStyles(PrSwipePositionDescription)
        category="PROBLEM_ANALYSIS"
      />
    </WithStyles(List)>
  </WithStyles(Collapse)>
</div>
`;

exports[`PrKommentar Component should display Teamwork 1`] = `
<div>
  <div
    className="PrKommentar-containerListItem-3"
  >
    <WithStyles(ListItem)
      button={true}
      className="PrKommentar-nestedListItem-4"
      onClick={[Function]}
    >
      <WithStyles(ListItemText)
        className={Object {}}
        secondary="Effektives Arbeiten im Team und Teamführung"
      />
      <WithStyles(Icon)
        className="PrKommentar-icon-6"
      >
        comment
      </WithStyles(Icon)>
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      className="PrKommentar-nestedNumber-7"
    >
      <WithStyles(FormControl)
        className="PrKommentar-formControlFTF-10"
      >
        <WithStyles(Select)
          displayEmpty={true}
          name="rating"
          onChange={[Function]}
          value={1}
        >
          <WithStyles(MenuItem)
            value={1}
          >
            1
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            value={2}
          >
            2
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            value={3}
          >
            3
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            value={4}
          >
            4
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            value={5}
          >
            5
          </WithStyles(MenuItem)>
        </WithStyles(Select)>
      </WithStyles(FormControl)>
    </WithStyles(ListItem)>
  </div>
  <WithStyles(Collapse)
    in={false}
    timeout="auto"
    unmountOnExit={true}
  >
    <WithStyles(List)
      className="PrKommentar-nestedText-1"
      component="div"
      disablePadding={true}
    >
      <WithStyles(ListItem)>
        <TextField
          InputLabelProps={
            Object {
              "shrink": true,
            }
          }
          InputProps={
            Object {
              "classes": Object {
                "input": "PrKommentar-bootstrapInput-2",
              },
              "disableUnderline": true,
              "name": "comment",
            }
          }
          fullWidth={true}
          id="TEAMWORK"
          label="Kommentar"
          multiline={true}
          onChange={[Function]}
          required={false}
          rowsMax="4"
          select={false}
          value="fff"
        />
      </WithStyles(ListItem)>
      <WithStyles(ListItem) />
      <WithStyles(PrSwipePositionDescription)
        category="TEAMWORK"
      />
    </WithStyles(List)>
  </WithStyles(Collapse)>
</div>
`;

exports[`PrKommentar Component should display the ContributionToCompanyDevelopment 1`] = `
<div>
  <div
    className="PrKommentar-containerListItem-3"
  >
    <WithStyles(ListItem)
      button={true}
      className="PrKommentar-nestedListItem-4"
      onClick={[Function]}
    >
      <WithStyles(ListItemText)
        className={Object {}}
        secondary="Beitrag zur Unternehmensentwicklung"
      />
      <WithStyles(Icon)
        className="PrKommentar-icon-6"
      >
        comment
      </WithStyles(Icon)>
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      className="PrKommentar-nestedNumber-7"
    >
      <WithStyles(FormControl)
        className="PrKommentar-formControlFTF-10"
      >
        <WithStyles(Select)
          displayEmpty={true}
          name="rating"
          onChange={[Function]}
          value={3}
        >
          <WithStyles(MenuItem)
            value={1}
          >
            1
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            value={2}
          >
            2
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            value={3}
          >
            3
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            value={4}
          >
            4
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            value={5}
          >
            5
          </WithStyles(MenuItem)>
        </WithStyles(Select)>
      </WithStyles(FormControl)>
    </WithStyles(ListItem)>
  </div>
  <WithStyles(Collapse)
    in={false}
    timeout="auto"
    unmountOnExit={true}
  >
    <WithStyles(List)
      className="PrKommentar-nestedText-1"
      component="div"
      disablePadding={true}
    >
      <WithStyles(ListItem)>
        <TextField
          InputLabelProps={
            Object {
              "shrink": true,
            }
          }
          InputProps={
            Object {
              "classes": Object {
                "input": "PrKommentar-bootstrapInput-2",
              },
              "disableUnderline": true,
              "name": "comment",
            }
          }
          fullWidth={true}
          id="CONTRIBUTION_TO_COMPANY_DEVELOPMENT"
          label="Kommentar"
          multiline={true}
          onChange={[Function]}
          required={false}
          rowsMax="4"
          select={false}
          value="hhh"
        />
      </WithStyles(ListItem)>
      <WithStyles(ListItem) />
      <WithStyles(PrSwipePositionDescription)
        category="CONTRIBUTION_TO_COMPANY_DEVELOPMENT"
      />
    </WithStyles(List)>
  </WithStyles(Collapse)>
</div>
`;
